linux (4.19~rc7-1~exp2) UNRELEASED; urgency=medium

  [ Ben Hutchings ]
  * linux-perf: Enable verbose output for build-time feature detection
  * udeb: Define mtd-core-modules package to contain MTD core if not built-in
  * udeb: Move MTD core from nic-modules to mtd-core-modules
  * debian/changelog: Move older entries to changelog.old

  [ Karsten Merker ]
  * [riscv64] Build a kernel image and udebs for riscv64 (Closes: #908161)

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 08 Oct 2018 18:45:06 +0100

linux (4.19~rc7-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Uwe Kleine-König ]
  * [armhf] enable MVNETA_BM_ENABLE and CAN_FLEXCAN as a module
  * enable NET_SCH_CAKE as a module (Closes: #908709)
  * enable HID_NTI as a module (Closes: #910260)

  [ Ben Hutchings ]
  * linux-kbuild: Include scripts/subarch.include (Closes: #910348)

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 07 Oct 2018 23:48:27 +0100

linux (4.19~rc6-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * [ppc64el] udeb: Fix relative #include filenames in kernel-image module
    list (really fixes FTBFS?)
  * debian/bin, debian/lib/python: Fix most errors reported by pycodestyle
  * debian/bin, debian/rules.real: Add symlink to Python package directory
    instead of editing path
  * debian/bin, debian/lib/python: Clean up imports based on pyflakes report
  * debian/bin, debian/lib/python: Delete write-only vars reported by pyflakes
  * debian/lib/python/debian_linux/gencontrol.py: Delete broken methods
  * debian/lib/python/debian_linux/config.py: Fix undefined exception type
  * Add Python static checks and unit tests to autopkgtest tests

 -- Ben Hutchings <ben@decadent.org.uk>  Wed, 03 Oct 2018 18:57:08 +0100

linux (4.19~rc4-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * debian/control: Add arch-qualification to build-dependencies for linux-perf