@@ -5,6 +5,8 @@ linux (4.19~rc7-1~exp2) UNRELEASED; urgency=medium
   * udeb: Define mtd-core-modules package to contain MTD core if not built-in
   * udeb: Move MTD core from nic-modules to mtd-core-modules
   * debian/changelog: Move older entries to changelog.old
+  * debian/rules: Checksum only the source name and version from
+    debian/changelog
 
   [ Karsten Merker ]
   * [riscv64] Build a kernel image and udebs for riscv64 (Closes: #908161)
